--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//src/lijun/demo/Constant.java=UTF-8
 encoding//src/lijun/demo/Context.java=UTF-8
 encoding//src/lijun/demo/Or.java=UTF-8
 encoding//src/lijun/demo/Variable.java=UTF-8
+encoding//src/test/Test.java=UTF-8
